Changelog
=========


3.2.5 (unreleased)
------------------

- Nothing changed yet.


3.2.4 (2012-05-22)
------------------

- Bugfix: fix sorting in grid state when it is wrong.
  [jone]


3.2.3 (2012-05-09)
------------------

- Use same markup in batching like plone.
  [Julian Infanger]

- Add meta:provides ftw.tabbedview3 for zcml:conditions.
  [jone]

- Setting 'X-Theme-Disabled' header in ListingView response for HTML fragment
  [lgraf]

- Added 'ajax_load' parameter to listing request.
  [lgraf]

- Setting correct Content-Type header for JSON response from ListingView.
  [lgraf]


3.2.2 (2012-04-23)
------------------

- Added CSS classes to brackets, which indicates the current page in
  batching.pt
  [mathias.leimgruber]


3.2.1 (2012-04-05)
------------------

- Replace some $ by jq in tabbedview.js.
 [mathias.leimgruber]


3.2 (2012-04-02)
----------------

- Bugfix in check for quickupload is available.
  [mathias.leimgruber]

- Added Quickupload plugin, wich provides drag'n drop multiple fileupload functionality.
  [phgross]



3.1.5 (2012-03-28)
------------------

- Enable extjs in portal_registry with extjs GS profile.
  [jone]


3.1.4 (2012-03-19)
------------------

- Removed integrated tooltips.
  If you still wand tooltips, use ftw.tooltip
  [mathias.leimgruber]


3.1.3 (2012-03-12)
------------------

- Disable tabbedview_search instead of hiding.
  [Julian Infanger]

- Add new spinner, update spinner position and add helper functions.
  [jone]


3.1.2 (2012-03-05)
------------------

- Switch tab after loading contents of new tab, add "loading_tab" class while loading.
  [jone]

- Filtering listings: do not flush all params but flush pagenumber only.
  [jone]

- Hide label of "Filter" box, but keep it for accessibility rasons.
  [jone]

- Make search function more robust, so that it is possible to have a non-listing
  view, switchin to a listing view when a search term is entered.
  [jone]

- Fix bug in listing menu generator.
  [jone]
